fix scaling on mobile

--- a/style.css
+++ b/style.css
@@ -86,15 +86,20 @@ li.header {
     padding-bottom: 40px;
 }
 #maincontent .logocontainer {
+    object-fit: cover;
     display: inline-flex;
     position: relative;
-    width: max-content;
+    max-width: 100%;
     height:70vh;
     top: 0;
     left: 0;
 }
 #maincontent img#charpic {
-    height: 100%;
+    object-fit: contain;
+    max-width: 90vw;
+    max-height: 70vh;
+    width: auto;
+    height: auto;
     position: relative;
     display: block;
     opacity: 0;
@@ -105,7 +110,11 @@ li.header {
     animation-fill-mode: forwards;
 }
 #maincontent img#titlepic {
-    height: 100%;
+    object-fit: contain;
+    max-width: 90vw;
+    max-height: 70vh;
+    width: auto;
+    height: auto;
     position: absolute;
     display: block;
     opacity: 0;
